# DiscordSelfBot

./: .gitignore  Dockerfile  default_config.toml  pyproject.toml
src/levibot/: __main__.py
src/levibot/config/: __init__.py  loader.py  model.py
